--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,7 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   padding: 0;
   margin: 0;
@@ -6,21 +9,28 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+
+#toggle {
+  width: 50px;
+    display: flex;
+    padding: 5px;
+    /* background-color: #1a202c; */
+    display: block;
+    border-radius: 1000px;
+    cursor: pointer;
+    box-shadow: 0px 5px 20px -10px #000000;
+    transition: background-color 0.2s ease-in;
 }
 
-* {
-  box-sizing: border-box;
+.toggle-inner {
+  width: 20px;
+    height: 15px;
+    /* background-color: white; */
+    border-radius: 1000px;
+    transition: margin-left 0.2s ease-in, background-color 0.2s ease-in;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.toggle-active {
+  margin-left: 20px;
 }
+
